plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ite.istad'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}


test {
	jvmArgs '-XX:+EnableDynamicAgentLoading'
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//	Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'

	testImplementation 'com.fasterxml.jackson.core:jackson-databind'

//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core:5.11.0'

	runtimeOnly 'com.mysql:mysql-connector-j'

	implementation 'org.hibernate.validator:hibernate-validator:8.0.2.Final'
}

tasks.named('test') {
	useJUnitPlatform()
}
